# brocode

./: .replit  Cargo.toml  README.md
src/: cli.rs  config.rs  git.rs  main.rs  openai.rs  utils.rs
src/commands/: commit.rs  mod.rs
~/.config/brocode/: config.toml
