[package]
name = "brocode"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A modular CLI tool that enhances developer workflows"

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
git2 = "0.18.0"
reqwest = { version = "0.11.20", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
colored = "2.0.4"
anyhow = "1.0.75"
thiserror = "1.0.47"
dialoguer = "0.10.4"
dirs = "5.0.1"
toml = "0.7.6"
async-trait = "0.1.73"
log = "0.4.20"
env_logger = "0.10.0"
